Add wrapper for std::chrono::duration

--- a/app/Version.h.in
+++ b/app/Version.h.in
@@ -1,10 +1,10 @@
 /**
  * @file   Version.h.in 
- * @author Irina Fedotova <i.fedotova@emw.hs-anhalt.de> 
+ * @author Irina Zander <irina.zander@hs-anhalt.de>
  * @date   Apr, 2012
  * @brief  This file is only for versioning of HighPerTimer. Each make of HighPerTimer increments the build number
  * 
- * Copyright (C) 2012-2016,  Future Internet Lab Anhalt (FILA),
+ * Copyright (C) 2012-2019,  Future Internet Lab Anhalt (FILA),
  * Anhalt University of Applied Sciences, Koethen, Germany. All Rights Reserved.
  */ 
 
@@ -13,5 +13,5 @@
 
 static const int Major = 1;
 static const int Minor = 1;
-static const int Build = 5;
+static const int Build =  6;
 #endif // ----- VERSION_H -------
