Adjust to c++17 standards
* fix compiler warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required (VERSION 2.6)
 PROJECT ( HighPerTimer )
 
 SET ( CMAKE_VERBOSE_MAKEFILE on )
-set ( CMAKE_CXX_FLAGS "-O0 -g3 -Wall -std=c++0x -lrt -lm -lstdc++ -lpthread -O2") 
+set ( CMAKE_CXX_FLAGS "-O0 -g3 -Wall -std=c++17 -lrt -lm -O2")
 
 ADD_SUBDIRECTORY ( lib/libHPTimer)
 
